--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
     {
       "format": "expanded",
       "extensionName": ".css",
-      "savePath": null,
+      "savePath": "css",
       "savePathSegmentKeys": null,
       "savePathReplaceSegmentsWith": null
     }
